refactor(owner): 优化空列表处理和代码简化
- 用CollUtil.emptyIfNull替换nullSafeList简化空列表处理
- 使用tags.getFirst()替代tags.get(0)避免空指针风险
- 简化流映射表达式，直接引用方法提升代码可读性
- 删除不再使用的nullSafeList方法，减少冗余代码